[package]
name = "axum_server"
version = "0.1.0"
authors = ["jiyuujin <jiyuujinunite@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
